19.02.2022

- [NEW] Botanist Guildmaster patch (improvement)


16.02.2022
===== Version 2 =====

- [FIXED] Herdsman in Latin America patch
- [IMPROVED] Lyceum patch
- [IMPROVED] Very Nice Magazine patch


===== Version 1 =====

Initial release.

- [NEW] Botanist in Latin America patch (compatibility)
- [NEW] Herdsman in Latin America patch (compatibility)
- [NEW] Lyceum patch (cosmetic)
- [NEW] Reindeer patch (cosmetic)
- [NEW] Very Nice Magazine patch (cosmetic)
