@@ -1,0 +1,59 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<GameInfo>
+  <GovernorPromotionModifiers>
+    <Row>
+      <GovernorPromotionType>GOVERNOR_PROMOTION_BUILDER_GUILDMASTER</GovernorPromotionType>
+      <ModifierId>GUILDMASTER_ADDITIONAL_HERDSMAN_CHARGES</ModifierId>
+    </Row>
+  </GovernorPromotionModifiers>
+  <Modifiers>
+    <Row>
+      <ModifierId>GUILDMASTER_ADDITIONAL_HERDSMAN_CHARGES</ModifierId>
+      <ModifierType>MODIFIER_SINGLE_CITY_ATTACH_MODIFIER</ModifierType>
+    </Row>
+    <Row>
+      <ModifierId>GUILDMASTER_ADDITIONAL_HERDSMAN_CHARGES_UNIT_MODIFIER</ModifierId>
+      <ModifierType>MODIFIER_SINGLE_CITY_BUILDER_CHARGES</ModifierType>
+      <SubjectRequirementSetId>UNIT_IS_HERDSMAN</SubjectRequirementSetId>
+      <Permanent>true</Permanent>
+    </Row>
+  </Modifiers>
+  <ModifierArguments>
+    <Row>
+      <ModifierId>GUILDMASTER_ADDITIONAL_HERDSMAN_CHARGES</ModifierId>
+      <Name>ModifierId</Name>
+      <Value>GUILDMASTER_ADDITIONAL_HERDSMAN_CHARGES_UNIT_MODIFIER</Value>
+    </Row>
+    <Row>
+      <ModifierId>GUILDMASTER_ADDITIONAL_HERDSMAN_CHARGES_UNIT_MODIFIER</ModifierId>
+      <Name>Amount</Name>
+      <Value>1</Value>
+    </Row>
+  </ModifierArguments>
+  <Requirements>
+    <Row>
+      <RequirementId>REQUIREMENT_UNIT_IS_HERDSMAN</RequirementId>
+      <RequirementType>REQUIREMENT_UNIT_TYPE_MATCHES</RequirementType>
+    </Row>
+  </Requirements>
+  <RequirementArguments>
+    <Row>
+      <RequirementId>REQUIREMENT_UNIT_IS_HERDSMAN</RequirementId>
+      <Name>UnitType</Name>
+      <Type>ARGTYPE_IDENTITY</Type>
+      <Value>UNIT_HERDSMAN</Value>
+    </Row>
+  </RequirementArguments>
+  <RequirementSets>
+    <Row>
+      <RequirementSetId>UNIT_IS_HERDSMAN</RequirementSetId>
+      <RequirementSetType>REQUIREMENTSET_TEST_ALL</RequirementSetType>
+    </Row>
+  </RequirementSets>
+  <RequirementSetRequirements>
+    <Row>
+      <RequirementSetId>UNIT_IS_HERDSMAN</RequirementSetId>
+      <RequirementId>REQUIREMENT_UNIT_IS_HERDSMAN</RequirementId>
+    </Row>
+  </RequirementSetRequirements>
+</GameInfo>
