@@ -1,12 +1,25 @@
 INSERT OR REPLACE INTO LocalizedText
 (Tag, Text, Language) VALUES
 
+( 'LOC_LMPT4U_HERDSMANGUILDMASTER_CONFIG_NAME',
+  '[ICON_TechBoosted] Herdsman Guildmaster patch',
+  'en_US' ),
+( 'LOC_LMPT4U_HERDSMANGUILDMASTER_CONFIG_DESC',
+  '[COLOR:SuzerainDark]Mod: Herdsman[ENDCOLOR] (by AOM)[NEWLINE][ICON_TechBoosted] Improvement patch by H.Humpel.[NEWLINE][NEWLINE]This patch adds the herdsman to Governor Liang''s "Guildmaster" promotion.',
+  'en_US' ),
 ( 'LOC_LMPT4U_HERDSMANINLATINAMERICA_CONFIG_NAME',
   '[ICON_ProductionQueue] Herdsman in Latin America patch',
   'en_US' ),
 ( 'LOC_LMPT4U_HERDSMANINLATINAMERICA_CONFIG_DESC',
   '[COLOR:SuzerainDark]Mod: Herdsman[ENDCOLOR] (by AOM)[NEWLINE][ICON_ProductionQueue] Compatibility patch by H.Humpel.[NEWLINE][NEWLINE]This patch lets the herdsman use the resources from the "Latin American Resources" mod.',
   'en_US' ),
+
+( 'LOC_LMPT4U_HERDSMANGUILDMASTER_CONFIG_NAME',
+  '[ICON_TechBoosted] Hirte Gildenmeister Patch',
+  'de_DE' ),
+( 'LOC_LMPT4U_HERDSMANGUILDMASTER_CONFIG_DESC',
+  '[COLOR:SuzerainDark]Mod: Botanist[ENDCOLOR] (by AOM)[NEWLINE][ICON_TechBoosted] Verbesserungs-Patch von H.Humpel.[NEWLINE][NEWLINE]Dieser Patch fügt den Hirten zu Gouverneur Liangs "Gildenmeister"-Beförderung hinzu.',
+  'de_DE' ),
 ( 'LOC_LMPT4U_HERDSMANINLATINAMERICA_CONFIG_NAME',
   '[ICON_ProductionQueue] Hirte in Lateinamerika Patch',
   'de_DE' ),
